fixed layout of view recipes screen (top bar, nav bar, search bar)

--- a/source/main.css
+++ b/source/main.css
@@ -1,4 +1,8 @@
 /* Recipe Name */
+body {
+  flex-direction: column;
+  align-items: center;
+}
 
 #RecipeName{
 position: absolute;
@@ -105,24 +109,24 @@ top: 134px;
 
 .TopBar{
 background: rgb(88, 88, 88);
+width: 100%;
+top: 0px;
 }
 
 #Logo{
-  width: 60px;
-  height: 40px;
+  width: 2%;
   padding-top: 5px;
 
   background: rgb(88, 88, 88);
-
 }
 
 #nav{
 position: absolute;
-width: 200px;
-height: 720px;
-left: 0px;
-top: 60px;
-bottom: 10x;
+float: left;
+width: 15%;
+height: 100%;
+align-items: center;
+padding-right: 30px;
 
 background-color: rgb(243, 195, 131);
 
@@ -131,15 +135,13 @@ background-color: rgb(243, 195, 131);
 #SearchBar{
 display: flex;
 flex-direction: row;
-justify-content: space-evenly;
+justify-content: space-between;
 align-items: center;
-padding: 10px 20px;
-
-position: absolute;
-width: 356px;
-height: 50px;
-left: 412px;
-top: 80px;
+padding: 10px 15px;
+margin: 1%;
+margin-left: 50%;
+width: 16%;
+height: 1.5%;
 
 border: 1px solid #000000;
 border-radius: 40px;
@@ -152,13 +154,11 @@ border-radius: 40px;
   font-size: 18px;
   height: 75%;
   width: 100%;
-  padding: 10px;
+  padding: 8px;
 }
 
 .search-icon {
-  width: 50%;
-  height: 50%;
-  align-self: right;
+  width: 75%;
 }
   
 
@@ -182,7 +182,7 @@ border-radius: 40px;
   color: rgb(88, 88, 88);
   display:block;
   text-decoration:none;
-  padding:20px 15px;
+  padding:20px 10px;
 }
 
 #nav a:hover{
